# prompt2map

./: .env.template  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/workflows/: python-package.yml
data/db/: schema.sql
examples/: 01_getting_started.ipynb
notebooks/: 01_tests.ipynb  02_dummy_map_folium.ipynb  03_sql_tests.ipynb  04_pydeck.ipynb  05_maps.ipynb  05_maps.ipynb.REMOVED.git-id  06_function_calling.ipynb  07_bar_plot.ipynb  10_qgis.ipynb  11_bar_plot_3.ipynb  13_literals.ipynb  14_save_embedding_batchs.ipynb  15_batch_tools.ipynb  16_sql_tests.ipynb  17_batch_embedding_etl.ipynb
prompt2map/: __init__.py  types.py
prompt2map/application/core/: prompt2map.py
prompt2map/application/generators/: llm_map_generator.py  openai_map_generator.py
prompt2map/application/maps/: bar_chart_map.py  choropleth_map.py
prompt2map/application/prompt2sql/: sql_query_processor.py  utils.py
prompt2map/application/retrievers/: sql_geo_retriever.py
prompt2map/interfaces/core/: map_generator.py
prompt2map/interfaces/nlp/: llm.py
prompt2map/interfaces/sql/: geo_database.py
prompt2map/providers/: geoduckdb.py  openai.py  postgres_db.py
src/application/core/: prompt2map.py
src/application/generators/: openai_map_generator.py
src/application/interfaces/: database.py  embedding.py  map_selector.py  prompt_mapper.py  prompt_to_sql_model.py  question_mapper.py  sql_model.py  streamlit_map.py  text_similarity.py
src/application/maps/: bar_chart_map.py  choropleth_map.py
src/application/prompt2sql/: llm_prompt2sql.py  sql_query_processor.py
src/application/retrievers/: sql_geo_retriever.py
src/application/services/: cosine_similarity.py  gpt4_map_selector.py  gpt4_question_mapper.py  (+5 more)
src/infrastructure/: gpt4.py  gpt4_chat.py  postgres_db.py
src/providers/: openai.py  postgres_db.py
test/: test_prompt2map_api.py
(+3 files in other folders)
