[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt2map"
version = "0.0.1"
description = "Dynamic maps generation based on natural language prompts using Retrieval-Augmented Generation (RAG)"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "José Miguel Cordero Carvacho" }
]
license = { text = "Copyright (c) 2024 José Miguel Cordero Carvacho" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent"
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
Homepage = "https://github.com/josemcorderoc/prompt2map"

[tool.setuptools.packages.find]
exclude = ["tests", "examples"]